# tail2futhark

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  ops  rep.fut  stack.yaml  tail2futhark.cabal  taketest.fut  zipWithTest.fut
aplacc/: aplacc.cabal  test.sh  test_parser.sh
aplacc/src/: Main.hs
aplacc/src/APLAcc/: Conversion.hs  Primitives.hs
aplacc/src/APLAcc/SimpleAcc/: AST.hs  ToHaskell.hs
aplacc/src/APLAcc/TAIL/: AST.hs  Parser.hs
aplacc/tests/: generate_examples.sh
aplacc/tests/failing/: cosmin.tail  inner2.tail  mb-test3.tail  mb-test8b-plain-ctx.tail  mult.tail  mult0.tail  sierpinski0.tail  test13.tail  test16.tail  test19.tail  test22.tail  test28.tail  test30.tail
aplacc/tests/newtests/: binaryops.tail  bool.tail  boolean.tail  ceilfloormaxmin.tail  chars.tail  circ.tail  compress.tail  cos.tail  cosmin.tail  drop.tail  dtransp.tail  else.tail  fib10.tail  first.tail  fun2.tail  idx.tail  life.tail  life2.tail  ln.tail  opr1.tail  opr2.tail  opr3.tail  pi.tail  pi2.tail  pow.tail  powmat.tail  powscl.tail  readfile.tail  readintvecfile.tail  repl.tail  replicate.tail  residue.tail  rot.tail  rotfirst.tail  shape.tail  sierpinski0.tail  sin.tail  slashbar.tail  take.tail  tax.tail  (+21 more)
aplacc/tests/our_own_tests/: bool1.tail  sierpinski0.tail  signal.tail  signal1.tail  signal2.tail  test1.tail  test10.tail  test15.tail  test17.tail  test21.tail  test23.tail  test8.tail  test9.tail
aplacc/tests/working/: Makefile  mb-test1.tail  mb-test2.tail  mb-test4.tail  mb-test5-inf.tail  mb-test7-cancel-lift.tail  mb-test8-plain-ctx.apl  mb-test8-plain-ctx.tail  mb-test9-reverse.apl  mb-test9-reverse.tail  residue.tail  signal.tail  signal1.tail  signal2.tail  test.tail  test1.tail  test10.tail  test11.tail  test12.tail  test15.tail  test17.tail  test18.tail  test2.tail  test20.tail  test21.tail  test23.tail  test24.tail  test25.tail  test27.tail  test3.tail  test4.tail  test5.tail  test7.tail  test9.tail
doc/: Bachelorproject.tex  Midtvejsrapport.bbl  Midtvejsrapport.blg  Midtvejsrapport.tex  Midtvejsrapport.toc  bachelorThesis.tex  ku-template.tex  primes.fut  primes.tail  references.bib
futharksnippets/: drop.fut  index.fut  reshape1lib.fut  reshape2.fut  take2.fut  take3.fut  transp2.fut  transp3.fut
ku-template/: Bachelorproject.tex  README.md
lib/: prelude.fut
src/: Main.hs  Options.hs
src/Futhark/: AST.hs
src/Tail2Futhark/: Compile.hs  Prelude.hs
tests/: Test.hs  common.mk  concat2matrices.apl  cons1.apl  integer_out.fut  snoc.tail  snoc2dim.tail  snoc2dim2.tail  tail-tests  test2.tail  zipwith.apl
tests/basic_tests/: .gitignore  Makefile  abcd.apl  abcd.tail  addd.fut  addd.ok  addd.tail  addi.fut  addi.ok  andbTrue.apl  andbTrue.fut  andbTrue.tail  blackscholes.apl  blackscholes.ok  blackscholes.tail  boolean.ok  boolean.tail  cat.fut  catV.fut  ceil.apl  ceil.tail  cons.ok  (+242 more)
tools/: apl2futhark  apl2opencl  apl2pyopencl  apl2python  apl2tail
(+135 files in other folders)
