
name:                tail2futhark
version:             0.1.0.0
synopsis:            APL to Futhark
-- description:         
-- license:             
--license-file:        LICENSE
author:              Henrik Urms, Anna Sofie Kiehn
maintainer:          urmshenrik@gmail.com, a.kiehn89@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tail2futhark
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src,aplacc/src
  build-depends:       base >= 4 && < 5,
                       parsec,
                       pretty
  -- hs-source-dirs:      
  default-language:    Haskell2010

  Ghc-Options:        -Wall

--  Ghc-Options:         -Wall

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests,src
  main-is:
    Test.hs
  build-depends:
    base >= 4 && < 5,
    tasty,
    --tasty-program,
    tasty-golden,
    process,
    filepath

